# vita-gamemate-be

./: .dockerignore  .gitignore  .gitmessage.txt  Dockerfile  README.Docker.md  README.md  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
resources/cert/: fullchain.pem  localhost-key.pem  localhost.pem  privkey.pem
resources/nginx/: nginx.conf
scripts/: docker.sh  entrypoint.sh  test.sh
src/: manage.py
src/chats/: consumers.py  models.py  routing.py  serializers.py  urls.py  views.py
src/chats/migrations/: 0001_initial.py
src/chats/tests/integration/: test_chat_message_api.py  test_chat_room_api.py
src/chats/tests/unit/: test_chat_model.py  test_chat_serializer.py
src/config/: asgi.py  settings.py  urls.py
src/game_requests/: apps.py  managers.py  urls.py  utils.py
src/game_requests/migrations/: 0001_initial.py  0002_alter_gamerequest_table.py  0003_gamerequest_status_alter_gamerequest_amount_and_more.py  0004_alter_gamerequest_game_alter_gamerequest_mate_and_more.py
src/game_requests/models/: __init__.py  game_requests_model.py
src/game_requests/serializers/: game_request_serializer.py
src/game_requests/tests/integration/: test_game_request_api.py
src/game_requests/tests/unit/: test_game_request_model.py
src/game_requests/views/: game_request_view.py
src/games/: urls.py
src/games/migrations/: 0001_alter_game_name.py  0001_initial.py  0002_alter_game_name.py  0002_game_views_alter_game_name.py  0002_gamerequest.py  0002_merge_add_game_add_games.py  0003_alter_game_name.py  add_game.py  add_games.py
src/games/models/: __init__.py  game_model.py  game_request_model.py
src/games/serializers/: game_serializers.py
src/games/tests/: game_test.py
src/games/tests/integration/: test_game_api.py
src/games/tests/unit/: test_game_model.py
src/games/views/: game_view.py
src/mates/: apps.py  exceptions.py  managers.py  urls.py  utils.py
src/mates/migrations/: 0001_initial.py  0002_alter_mategameinfo_game_and_more.py  0003_alter_mategameinfo_level.py  0004_alter_mategameinfo_image.py
src/mates/models/: __init__.py  mate_model.py
src/mates/serializers/: mate_serializer.py
src/mates/tests/: test_mate_model.py
src/mates/tests/integration/: test_mate_api.py  test_mate_search_api.py
src/mates/tests/unit/: test_mate_model_manager.py
src/mates/urls/: __init__.py
src/mates/views/: mate_search_view.py  mate_view.py
src/payments/: models.py  serializers.py  urls.py  views.py
src/payments/migrations/: 0001_initial.py
src/reviews/: urls.py  utils.py
src/reviews/migrations/: 0001_initial.py
src/reviews/models/: __init__.py  reviews_model.py
src/reviews/serializers/: serializers.py
src/reviews/tests/: test_review.py  test_reviews.py
src/reviews/views/: reviews_views.py
src/users/: consumers.py  exceptions.py  managers.py  urls.py
src/users/migrations/: 0001_initial.py  0002_alter_user_profile_image.py  0002_remove_user_last_activity.py
src/users/models/: __init__.py  user_model.py
src/users/serializers/: token_serializer.py  user_serializer.py
src/users/services/: social_login_service.py  user_service.py
src/users/tests/: test_user_model.py
src/users/tests/integration/: test_oauth_api.py  (+3 more)
src/users/views/: oauth_view.py  token_view.py  user_status_view.py  user_view.py
src/wallets/: apps.py  signals.py  urls.py
src/wallets/migrations/: 0001_initial.py  0002_alter_wallet_user.py
src/wallets/models/: __init__.py  wallets_model.py
src/wallets/serializers/: wallets_serializers.py
src/wallets/tests/: test_wallets_models.py  test_wallets_views.py
src/wallets/views/: wallet_view.py
(+7 files in other folders)
