[tool.poetry]
name = "main-project"
version = "0.1.0"
description = ""
authors = ["hwangtate <ghkdxodud10253504@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
django = "^5.1.1"
djangorestframework = "^3.15.2"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
pymysql = "^1.1.1"
django-redis = "^5.4.0"
cryptography = "^43.0.1"
gunicorn = "^23.0.0"
drf-spectacular = "^0.27.2"
pyjwt = "^2.9.0"
djangorestframework-simplejwt = "^5.3.1"
django-cors-headers = "^4.5.0"
channels = "^4.0.0"
channels-redis = "^4.0.0"
redis = "^5.0.1"
daphne = "^4.0.0"
psycopg2-binary = "^2.9"  # PostgreSQL을 사용하기 위한 패키지
boto3 = "^1.35.44"
django-storages = {extras = ["s3"], version = "^1.14.4"}
pillow = "^11.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
coverage = "^7.6.1"
django-stubs = "^5.1.0"
types-pymysql = "^1.1.0.20240524"
django-extensions = "^3.2.3"
ipython = "^8.28.0"

[tool.black]
line-length = 140

[tool.isort]
profile = "black"

[tool.coverage.report]
fail_under = 50

[tool.coverage.run]
omit = [
  ".mypy_cache/**/*",
  "*/migrations/*",
  "*/*test*.py",
]

[tool.django-stubs]
django_settings_module = "config.settings"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"